--- a/index.html
+++ b/index.html
@@ -13,12 +13,8 @@
         <div>
             <table>
                 <tr>
-                    <td>
-                        <input id="kolom" type="text" value="" disabled>
-                    </td>
-                    <td>
-                        <button id="del"><span class="iconify" data-icon="akar-icons:backspace" data-inline="false"></span></button>
-                    </td>
+                    <td><input id="kolom" type="text" value="" disabled></td>
+                    <td><button id="del"><span class="iconify" data-icon="akar-icons:backspace" data-inline="false"></span></button></td>
                 </tr>
             </table>
         </div>
